fix: image display on mobile

--- a/src/components/Image/Image.scss
+++ b/src/components/Image/Image.scss
@@ -8,4 +8,10 @@
     object-fit: scale-down;
     background-color: black;
   }
+
+  @media only screen and (max-width: 768px) {
+    img {
+      background-color: var(--background-color);
+    }
+  }
 }
