--- a/src/components/sections/Projects/Projects.scss
+++ b/src/components/sections/Projects/Projects.scss
@@ -115,7 +115,7 @@ $transition: all 350ms ease-in-out;
       }
       .project__image {
         position: relative;
-        height: 50vh;
+        height: 250px;
         scale: 1;
 
         img {
